[LAB-82] Removed no longer required comments
Signed-off-by: Andreas Pieber <anpieber@gmail.com>