@@ -136,29 +136,6 @@ public class KarafTestContainer implements TestContainer {
             File karafHome = karafBase;
             File deploy = new File(karafBase + "/deploy");
             String karafData = karafHome + "/data";
-            // if "%JAVA_MIN_MEM%" == "" (
-            // set JAVA_MIN_MEM=128M
-            // )
-            //
-            // if "%JAVA_MAX_MEM%" == "" (
-            // set JAVA_MAX_MEM=512M
-            // )
-            //
-            // if "%JAVA_PERM_MEM%" == "" (
-            // set JAVA_PERM_MEM=16M
-            // )
-            //
-            // if "%JAVA_MAX_PERM_MEM%" == "" (
-            // set JAVA_MAX_PERM_MEM=64M
-            // )
-            // set DEFAULT_JAVA_OPTS=-server -Xms%JAVA_MIN_MEM% -Xmx%JAVA_MAX_MEM% -XX:PermSize=%JAVA_PERM_MEM%
-            // -XX:MaxPermSize=%JAVA_MAX_PERM_MEM% -Dderby.system.home="%KARAF_DATA%\derby"
-            // -Dderby.storage.fileSyncTransactionLog=true -Dcom.sun.management.jmxremote
-            //
-            // set CLASSPATH=%LOCAL_CLASSPATH%;%KARAF_BASE%\conf
-            //
-            // set DEFAULT_JAVA_DEBUG_OPTS=-Xdebug -Xnoagent -Djava.compiler=NONE
-            // -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
             ArrayList<String> javaOpts = Lists.newArrayList();
             appendVmSettingsFromSystem(javaOpts, subsystem);
             String[] javaEndorsedDirs =
